<resources>
    <string name="app_name">Hello World</string>
    <string name="temperature">26℃</string>
    <string name="refresh">Refresh (counter++)</string>
    <string name="city">Omsk</string>
    <string name="change_city">Change City</string>
    <string name="city_search">City</string>
    <string name="show_wind_and_pressure">Show wind speed and pressure</string>
    <string name="edit_city_done">Done</string>
    <string name="settings">Settings</string>
    <string name="switch_to_dark">Switch to dark theme</string>
    <string name="reset_settings">Reset settings</string>
    <string name="go_back">Back</string>
    <string name="text_counter">Counter:</string>
    <string name="counter">0</string>
    <string name="wind_and_pressure">Wind speed: 24 m/s   Pressure: 750 mm Hg</string>
    <string name="go_to_browser">Go to browser</string>
    <string name="site" translatable="false">https://weather.com/weather/today/l/54.97,73.45</string>
    <string name="first_launch">First launch!</string>
    <string name="relaunching">Relaunching!</string>
    <string name="reset_settings_confirm">Are you sure about that?…</string>
    <string name="confirm">Yasss</string>
    <string name="select_city">Select city</string>
</resources>