<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SelectCityFragment">

    <TextView
        android:id="@+id/selectCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/select_city"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/selectCity"
        app:layout_constraintTop_toBottomOf="@+id/selectCity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_search" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/showWindAndPressure"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/show_wind_and_pressure"
        app:layout_constraintBottom_toTopOf="@+id/editCityDone"
        app:layout_constraintStart_toStartOf="@+id/editCity" />

    <Button
        android:id="@+id/editCityDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/edit_city_done"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editCity" />

</androidx.constraintlayout.widget.ConstraintLayout>